Update window title when changing selection in comparison mode

Summary:
The window title now updates with the currently selected image when the user changes the selection in comparison mode.

BUG: 314724

Before:
{F5743855}

After:
{F5743856}

Test Plan:
View and select different images with and without comparison mode and verify the title.

Resize images by resizing the window or selecting/deselecting images while in comparison mode and verify the title.

View and switch between images in normal mode to verify it still works, including title updates.

Reviewers: #gwenview, ngraham, rkflx

Reviewed By: #gwenview, ngraham, rkflx

Subscribers: muhlenpfordt, ngraham, rkflx, #gwenview

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D11105